<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngguru" />

    <EditText
        android:id="@+id/pword_tv"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/email_tv"
        app:layout_constraintStart_toStartOf="@+id/email_tv"
        app:layout_constraintTop_toBottomOf="@+id/email_tv" />

    <EditText
        android:id="@+id/email_tv"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rectangle"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/grey"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pword_tv" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_arrow_forward_green_24dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/green_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="50dp"
        android:text="@string/or_signup_with"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ic_facebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ic_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ic_facebook"
        app:layout_constraintTop_toTopOf="@+id/ic_facebook"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/g_clip" />

    <ImageView
        android:id="@+id/ic_facebook"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/register"
        app:layout_constraintEnd_toStartOf="@+id/ic_google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/register"
        app:layout_constraintTop_toTopOf="@+id/register"
        app:srcCompat="@drawable/img_fb" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>